# graphlab-py

./: .gitignore  CODE_OF_CONDUCT.md  README.md  TODO.md  example.py  pyproject.toml
.github/workflows/: pypi-publish.yaml
graphlab_py/: GraphLab.py  __init__.py  graph.py  interface.py
graphlab_py/providers/: __init__.py  base.py  falkordb.py  neo4j.py
graphlab_py/storage/: base.py  falkordb.py  neo4j.py
