[tool.poetry]
name = "graphlab-py"
version = "0.1.4"
description = ""
authors = ["knutole <knutole@graphlab.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
litellm = "^1.54.1"
falkordb = "^1.0.10"
graphrag-sdk = "^0.3.3"
neo4j = "^5.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
